<resources>
    <string name="app_name">Machine Shop</string>
    <string name="app_title">Management System</string>

    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="register">Registration</string>

    <string name="business_Name">Business Name</string>
    <string name="email">Your email</string>
    <string name="password">password</string>
    <string name="invoice_generation">Create Invoice</string>
    <string name="discount">Discount</string>
    <string name="add_items">Add Item</string>
    <string name="sub_total">Subtotal</string>
    <string name="total">Total</string>
    <string name="grandtotal">Grandtotal</string>

    <!--Navigation -->
    <string name="Navigation_drawer_open">Navigation Drawer Open</string>
    <string name="Navigation_drawer_close">Navigation Drawer Close</string>

    <!--Drawer menu-->
    <string name="menu_services">Services</string>
    <string name="menu_history">Invoices</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_share">Share</string>
    <string name="menu_about_us">About us</string>

    <string name="swipe_left_for_register"> </string>
    <string name="swipe_Right_for_register">Swipe right for Signin</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="wellcome_greeting">Hello There, \nWellcome Back</string>
    <string name="signin_continue">Signin to continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="All_invoice_frag">Your invoices will show up here. Click the plus button below to create
    your first invoice!</string>
    <string name="outstanding_frag">Invoices that are not yet paid show up here.</string>
    <string name="paid_frag">Invoices that you mark paid will show up here.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
