<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/afterAnimationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/parent_padding">

    <ImageView
        android:id="@+id/bookIconImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="@dimen/parent_padding"
        android:contentDescription="@null"
        android:src="@drawable/ic_collections_bookmark_black_24dp" />

    <TextView
        android:id="@+id/WelcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookIconImageView"
        android:text="@string/wellcome_greeting"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textVeiw_page_title"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_below="@+id/WelcomeTextView"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/et_custom"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="15sp" />



    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_above="@id/left_arrow"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_left_arrow" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/swipe_left_for_register"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />


</RelativeLayout>

