<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2E2"
    android:orientation="vertical"
    android:padding="@dimen/root_Spacing"
    tools:context=".Fragments.Invoice">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_Spacing"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/view_Spacing">

        <TextView
            android:id="@+id/invoice_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="inv-001"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textAppearanceHeadline5"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/TV_Business_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_Name"
                android:textSize="@dimen/textVeiw_page_MS" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"
                android:text="10/10/2020"
                android:textSize="@dimen/textVeiw_page_MS" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_Spacing"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:padding="@dimen/view_Spacing">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="To :"
            android:textSize="@dimen/textAppearanceBody1" />

        <TextView
            android:id="@+id/client_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Client"
            android:textSize="@dimen/textAppearanceBody1" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_Spacing"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/business_nam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/add_items"
            android:textSize="@dimen/textVeiw_page_MS" />

        <TextView
            android:id="@+id/dte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:text="1 x Rs0.00"
            android:textSize="@dimen/textVeiw_page_MS" />

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dte"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:text="Rs0.00"
            android:textSize="@dimen/textVeiw_page_MS" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_price"
            android:background="#C5BEBE">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/sub_total"
                android:textSize="@dimen/textVeiw_page_MS" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"
                android:text="Rs0.00"
                android:textSize="@dimen/textVeiw_page_MS" />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_Spacing"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/Discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/discount"
            android:textSize="@dimen/textVeiw_page_MS" />

        <TextView
            android:id="@+id/discount_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:text="Rs0.00"
            android:textSize="@dimen/textVeiw_page_MS" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grand_total"
            android:layout_below="@id/discount_price"
            android:background="#7A7272">


            <TextView
                android:id="@+id/tv_grand_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/grandtotal"
                android:textSize="@dimen/textVeiw_page_MS" />

            <TextView
                android:id="@+id/tv_discount_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="10dp"
                android:text="Rs0.00"
                android:textSize="@dimen/textVeiw_page_MS" />

        </RelativeLayout>




    </RelativeLayout>


</LinearLayout>